--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
+    "@types/lodash-es": "^4.17.12",
     "@viz-js/viz": "^3.8.0",
+    "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
