--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@viz-js/viz": "^3.8.0",
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
