--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "url-join": "^5.0.0"
+    "url-join": "^5.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
